@@ -5,6 +5,9 @@ cod-tools (unreleased)
       - the neighbour_list_to_cif_datablock() subroutine.
     - COD::CIF::Data::CODFlags:
       - the has_partially_occupied_ordered_atoms() subroutine.
+    - COD::CIF::Data::ExcludeFromStatistics:
+      - the 'has_partially_occupied_ordered_atoms' option to
+        exclude_from_statistics() subroutine.
     - cif_validate:
       - the '--range-su-multiplier' option.
   * Changed:
